subprojects {
    repositories {
        mavenCentral()
    }

    if (!name.contains("kotlin")) {
        apply plugin: 'java'

        java {
            toolchain {
                languageVersion.set(JavaLanguageVersion.of(22))
            }
        }

        tasks.withType(JavaCompile).configureEach {
            options.debug = true
            options.encoding = 'UTF-8'
            options.compilerArgs << '-parameters' << '-Xlint:all' << '-Xlint:-serial' << '-XprintRounds' << '--enable-preview'
        }

        dependencies {
            implementation platform("ru.tinkoff.kora:kora-parent:$koraVersion")
            annotationProcessor platform("ru.tinkoff.kora:kora-parent:$koraVersion")
        }
    }
}
